--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -2,3 +2,41 @@
  * Author: Nabil Enayet October 2015
  */
 
+/*Angular ChartJS*/
+.chart-legend,.bar-legend,.line-legend,.pie-legend,.radar-legend,.polararea-legend,.doughnut-legend{list-style-type:none;margin-top:5px;text-align:center;-webkit-padding-start:0;-moz-padding-start:0;padding-left:0}.chart-legend li,.bar-legend li,.line-legend li,.pie-legend li,.radar-legend li,.polararea-legend li,.doughnut-legend li{display:inline-block;white-space:nowrap;position:relative;margin-bottom:4px;border-radius:5px;padding:2px 8px 2px 28px;font-size:smaller;cursor:default}.chart-legend li span,.bar-legend li span,.line-legend li span,.pie-legend li span,.radar-legend li span,.polararea-legend li span,.doughnut-legend li span{display:block;position:absolute;left:0;top:0;width:20px;height:20px;border-radius:5px}
+/*# sourceMappingURL=angular-chart.min.css.map */
+
+/* AutoComplete */
+.autocomplete-suggestions { border: 1px solid #999; background: #FFF; overflow: auto; }
+.autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
+.autocomplete-selected { background: #F0F0F0; }
+.autocomplete-suggestions strong { font-weight: normal; color: #3399FF; }
+.autocomplete-group { padding: 2px 5px; }
+.autocomplete-group strong { display: block; border-bottom: 1px solid #000; }
+
+.right {
+	text-align:right;
+}
+
+a {
+	cursor:pointer;
+}
+
+.progress {
+	z-index:1000;
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:10px;
+	margin-top:0;
+}
+
+.interactionLayer {
+	position:fixed;
+	top:64px;
+	left:0;
+	//width:100%;
+	//height:calc(100vh - 64px);
+	//padding:10px;
+}
