--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -40,3 +40,30 @@ a {
 	//height:calc(100vh - 64px);
 	//padding:10px;
 }
+
+span.emphasis {
+	font-weight: bold;
+	text-decoration:underline;
+}
+
+.expandIcon {
+	position:absolute;
+	top:0;
+	right:0;
+	color:white;
+	padding:15px;
+	cursor:pointer;
+	transform:rotate(45deg);
+}
+
+.card {
+	transition: all 0.4s;
+}
+
+.switch label .lever:after {
+	background-color:lightblue;
+}
+
+.switch label input[type=checkbox]:checked+.lever:after {
+	background-color:lightpink;
+}
