--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,8 @@
 			<div class="nav-wrapper container">
 				<a href="http://anylytics.io" class="brand-logo">Census Names Explorer</a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
-					<li><a href="./#/home">Names Histogram</a></li>
+					<li><a href="./#/home">Names Comparer</a></li>
+					<li><a href="./#/histogram">Names Histogram</a></li>
 					<li><a href="./#/map">Map</a></li>
 					<li><a href="mailto:hello@anlytics.io">Contact</a></li>
 					<li><a class="green darken-1" ng-click="about()">About</a></li>
