--- a/static/partials/home.html
+++ b/static/partials/home.html
@@ -9,7 +9,7 @@
 	</p>
 
 	<input placeholder="Just start typing!" autofocus type="text" ng-model="selectedName" id="autocomplete_histName"/>
-	<canvas id="line" class="chart chart-line" chart-data="data"
+	<canvas id="line" class="chart chart-line" chart-data="data" chart-options="options"
 		chart-labels="labels" chart-legend="true" chart-series="series"
 		chart-click="onClick" >
 	</canvas> 
