--- a/static/partials/home.html
+++ b/static/partials/home.html
@@ -12,8 +12,8 @@
 
 	<p>Now analyzing <ul>  {{selected_name}}  </ul></p>
 
-	{{series}}
-	<input type="textarea" value="{{data}}">
+	<!--{{series}}
+	<input type="textarea" value="{{data}}">-->
 
 	<canvas id="line" class="chart chart-line" chart-data="data" chart-options="options"
 		chart-labels="labels" chart-legend="true" chart-series="series"
