--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -72,3 +72,30 @@ span.emphasis {
 	text-transform: uppercase;
 	font-weight: bold;
 }
+
+.names-picker {
+	padding:25px;
+	margin-bottom:15px;
+	width:100%;
+}
+
+.names-picker > form > div {
+	width:20%;
+	padding:10px;
+	display:inline-block;
+	transition:all 0.4s;
+}
+
+.names-picker > form > div:hover {
+	background-color:gainsboro;
+	transition:all 0.4s;
+	border-radius:10px;
+}
+
+.names-picker > form > div > label {
+	width:100%;
+}
+
+.large-input {
+	font-size:3em;
+}
