--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -99,3 +99,24 @@ span.emphasis {
 .large-input {
 	font-size:3em;
 }
+
+.dist-img-picker {
+	max-width:100%;
+	cursor:pointer;
+	padding-top:5px;
+	transition:all 0.3s;
+}
+
+.circle-loader-wrapper {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	margin: auto;
+	background-color: whitesmoke;
+	z-index: 1000;
+	opacity: .6;
+	top: 0;
+	left: 0;
+	padding-left: 50vw;
+	padding-top: 50vh;
+}
