--- a/static/partials/home.html
+++ b/static/partials/home.html
@@ -22,7 +22,7 @@
 
 	<h5 class="caps">Historical Name Comparison Tool</h5>
 	<p class="flow-text">
-		Ever wondered what other names were popular during the same time as yours? Now you can find out!
+		Ever wondered what other names were popular during the same time as yours? Now you can find out! To learn more about the data, our methodology and algorithms used, read our associated <a href="../blog/fifteen-minutes-of-name">blog post</a>!
 	</p>
 									
 
@@ -30,7 +30,7 @@
 
 
 	<div class="row">
-		<div class="col s12 m5">
+		<div class="col s12 l5">
 			<div class="card white darken-1">
 				<div class="card-content black-text">
 					<span class="card-title black-text">Search for a Name</span>
@@ -38,7 +38,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col s12 m4">
+		<div class="col s12 l4">
 			<div class="card white darken-1">
 				<div class="card-content black-text">
 					<span class="card-title black-text">Or Select a Sample Distribution</span>
@@ -59,7 +59,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col s12 m3">
+		<div class="col s12 l3">
 			<div class="card white darken-1">
 				<div class="card-content black-text">
 					<div class="flow-text">
