--- a/static/partials/home.html
+++ b/static/partials/home.html
@@ -96,6 +96,10 @@
 			<div class="card white darken-1">
 				<div class="card-content black-text">
 					<span class="card-title black-text">Frequency By Year</span>
+					<span class="right"><!--a class="btn-floating waves-effect waves-light red"><img class="share" src="./static/img/share.png"/></a-->
+						<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//anylytics.io/names/%23/home?name={{urlname}}" class="waves-effect waves-light btn blue darken-4">Share</a>
+						<a href="https://twitter.com/home?status=http%3A//anylytics.io/names/%23/home?name={{urlname}}" class="waves-effect waves-light btn blue lighten-3">Tweet</a>
+					</span>
 					<canvas id="line" class="chart chart-line" chart-data="data" chart-options="options"
 						chart-labels="labels" 
 						chart-legend="true" 
