--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -120,3 +120,14 @@ span.emphasis {
 	padding-left: 50vw;
 	padding-top: 50vh;
 }
+
+.container-custom {
+
+}
+
+.share {
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
