--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,17 @@
 		<script src="./static/js/controllers.js"></script>
 		<link 	href="./static/css/custom.css" rel="stylesheet">
 
+
+		<title>Anylytics - Census Names Explorer</title>
+		<!-- You can use Open Graph tags to customize link previews.
+		Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
+		<meta property="og:url"           content="http://anylytics.io/names" />
+		<meta property="og:type"          content="website" />
+		<meta property="og:title"         content="Census Names Explorer" />
+		<meta property="og:description"   content="A collection of tools to help explore US Census data around baby names" />
+		<meta property="og:image"         content="http://anylytics.io/static/img/visualize.png" />
+
+
 	</head>
 
 	<body ng-controller="indexController">
