--- a/static/partials/home.html
+++ b/static/partials/home.html
@@ -73,7 +73,11 @@
 							</label>
 						</div>
 						<div class="switch">
-							Normalization<br/>
+							Normalization
+							<button onclick="$('#normalize').openModal();" 
+									data-target="normalize" class="btn-floating modal-trigger blue lighten-1" ng-show="urlname">
+								?
+							</button><br/>
 							<label>
 								Raw
 								<input type="checkbox" ng-model="normalized">
@@ -103,12 +107,16 @@
 						<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//anylytics.io/names/%23/home?name={{urlname}}" class="waves-effect waves-light btn blue darken-4">Share</a>
 						<a href="https://twitter.com/home?status=http%3A//anylytics.io/names/%23/home?name={{urlname}}" class="waves-effect waves-light btn blue lighten-3">Tweet</a>
 					</span>
-					<canvas id="line" class="chart chart-line" chart-data="data" chart-options="options"
-						chart-labels="labels" 
-						chart-legend="true" 
-						chart-series="series"
-						chart-click="onClick" >
-					</canvas> 
+					<div id="plot-container">
+						<canvas id="line" class="chart chart-line" chart-data="data" chart-options="options" chart-colours ="colors"
+							chart-labels="labels" 
+							chart-legend="true" 
+							chart-series="series"
+							chart-click="onClick" >
+						</canvas> 
+						<div id="x-label">YEAR</div>
+						<div id="y-label">FREQUENCY OF NAME</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -131,6 +139,21 @@
 		</div>
 		<div class="modal-footer">
 			<a href="../blog/fifteen-minutes-of-name" class=" modal-action modal-close waves-effect waves-green">Tell me more!</a>
+			<a href="" class=" modal-action modal-close waves-effect waves-green btn-flat">Got it!</a>
+		</div>
+	</div>
+
+
+	<!-- Normalization Modal -->
+	<div id="normalize" class="modal">
+		<div class="modal-content">
+			<h4>What does this switch do?</h4>
+			<p>
+			By turning normalization 'on', the frequency of a name is divided by its average frequency over the 100 years of this data. By doing this, we can cancel out effects of one name in a cluster being extremely more popular than others, therefore leveling the playing field. 
+			</p>
+		</div>
+		<div class="modal-footer">
+			<a href="../blog/fifteen-minutes-of-name#normalize" class=" modal-action modal-close waves-effect waves-green">Tell me more!</a>
 			<a href="" class=" modal-action modal-close waves-effect waves-green btn-flat">Got it!</a>
 		</div>
 	</div>
