Mobile & browser bug fixes
> Mobile autocomplete issue fixed by revamping mobile layout & adding
stylesheet

> Browser bug (hover & slide causing previous search to appear) fixed by
adding a $scope.$apply after deleting variables to completely erase
prior data sets from ng memory

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -151,3 +151,16 @@ div#y-label {
 }
 
 .chart-container { margin-left: 15px;}
+
+#autocomplete_histName {position:relaive;}
+
+
+/* Mobile Optimizations */
+
+@media only screen and (max-device-width: 650px) {
+
+}
+
+.mobile-switch {
+	display:none;
+}
