--- a/static/partials/home.html
+++ b/static/partials/home.html
@@ -34,35 +34,35 @@
 			<div class="card white darken-1">
 				<div class="card-content black-text">
 					<span class="card-title black-text">Search for a Name</span>
-					<input placeholder="Just start typing!" autofocus type="text" ng-model="selectedName" id="autocomplete_histName"/>
+					<input placeholder="Just start typing!" autofocus type="text" ng-model="selectedName" id="autocomplete_histName" class="flow-text"/>
 				</div>
 			</div>
 		</div>
-		<div class="col s12 l4">
+		<div class="col s8 l4">
 			<div class="card white darken-1">
 				<div class="card-content black-text">
 					<span class="card-title black-text">Or Select a Sample Distribution</span>
 					<div class="row">
-						<div class="col s3">
+						<div class="col s6 l3">
 							<img class="dist-img-picker" src="./static/img/left.png" ng-click="goTo('left');"/>
 						</div>
-						<div class="col s3">
+						<div class="col s6 l3">
 							<img class="dist-img-picker" src="./static/img/right.png" ng-click="goTo('right');"/>
 						</div>
-						<div class="col s3">
+						<div class="col s6 l3">
 							<img class="dist-img-picker" src="./static/img/center.png" ng-click="goTo('center');"/>
 						</div>
-						<div class="col s3">
+						<div class="col s6 l3">
 							<img class="dist-img-picker" src="./static/img/bimodal.png" ng-click="goTo('bimodal');"/>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="col s12 l3">
+		<div class="col s4 l3">
 			<div class="card white darken-1">
 				<div class="card-content black-text">
-					<div class="flow-text">
+					<div class="hide-on-small-only">
 						<div class="switch" ng-show="false">
 							Current Gender: {{gender}}<br/>
 							<label>
@@ -78,12 +78,23 @@
 									data-target="normalize" class="btn-floating modal-trigger blue lighten-1" ng-show="urlname">
 								?
 							</button><br/>
-							<label>
+							<label class="">
 								Raw
 								<input type="checkbox" ng-model="normalized">
 								<span class="lever"></span>
-								Normalized
+								Normalize
 							</label>
+						</div>
+						<div class="mobile-switch" ng-show="urlname">
+							<label for="" class="card-title black-text">
+								Normalize?
+							</span><button onclick="$('#normalize').openModal();" 
+									data-target="normalize" class="btn-floating modal-trigger blue lighten-1" ng-show="urlname">
+								?
+							</button>
+							<br/>
+							<input type="checkbox" ng-model="normalized"/>
+							
 						</div>
 					</div>
 
@@ -103,10 +114,6 @@
 					<button onclick="$('#explain').openModal();" data-target="explain" class="btn modal-trigger green lighten-1" ng-show="urlname&&!loading">
 						What am I seeing?
 					</button>
-					<span class="right"><!--a class="btn-floating waves-effect waves-light red"><img class="share" src="./static/img/share.png"/></a-->
-						<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//anylytics.io/names/%23/home?name={{urlname}}" class="waves-effect waves-light btn blue darken-4">Share</a>
-						<a href="https://twitter.com/home?status=http%3A//anylytics.io/names/%23/home?name={{urlname}}" class="waves-effect waves-light btn blue lighten-3">Tweet</a>
-					</span>
 					<div id="plot-container" ng-show="urlname&&!loading">
 						<canvas id="line" class="chart chart-line" chart-data="data" chart-options="options" chart-colours ="colors"
 							chart-labels="labels" 
@@ -115,8 +122,13 @@
 							chart-click="onClick" >
 						</canvas> 
 						<div id="x-label">YEAR</div>
-						<div id="y-label">FREQUENCY OF NAME</div>
+						<div id="y-label"><span ng-show="normalized">RELATIVE </span>FREQUENCY OF NAME</div>
 					</div>
+					
+					<span class="right social"><!--a class="btn-floating waves-effect waves-light red"><img class="share" src="./static/img/share.png"/></a-->
+						<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//anylytics.io/names/%23/home?name={{urlname}}" class="waves-effect waves-light btn blue darken-4">Share</a>
+						<a href="https://twitter.com/home?status=http%3A//anylytics.io/names/%23/home?name={{urlname}}" class="waves-effect waves-light btn blue lighten-3">Tweet</a>
+					</span>
 				</div>
 			</div>
 		</div>
