--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
 		<script src="./static/js/app.js"></script>
 		<script src="./static/js/controllers.js"></script>
 		<link 	href="./static/css/custom.css" rel="stylesheet">
+		<link   href="./static/css/custom-mobile.css" rel="stylesheet" media="screen and (max-device-height: 799px)" />
 
 
 		<title>Anylytics - Census Names Explorer</title>
