--- a/static/partials/home.html
+++ b/static/partials/home.html
@@ -62,7 +62,7 @@
 		<div class="col s4 l3">
 			<div class="card white darken-1">
 				<div class="card-content black-text">
-					<div class="hide-on-small-only">
+					<div class="">
 						<div class="switch" ng-show="false">
 							Current Gender: {{gender}}<br/>
 							<label>
@@ -124,7 +124,7 @@
 						<div id="x-label">YEAR</div>
 						<div id="y-label"><span ng-show="normalized">RELATIVE </span>FREQUENCY OF NAME</div>
 					</div>
-					
+
 					<span class="right social"><!--a class="btn-floating waves-effect waves-light red"><img class="share" src="./static/img/share.png"/></a-->
 						<a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//anylytics.io/names/%23/home?name={{urlname}}" class="waves-effect waves-light btn blue darken-4">Share</a>
 						<a href="https://twitter.com/home?status=http%3A//anylytics.io/names/%23/home?name={{urlname}}" class="waves-effect waves-light btn blue lighten-3">Tweet</a>
