--- a/static/partials/state_names.html
+++ b/static/partials/state_names.html
@@ -44,7 +44,7 @@
 				<a class="btn" ng-class="{'disabled':playing==true}" ng-click="resetAnimation()"> <i class="material-icons">replay</i> </a>
 				<h6>Speed Control</h6>
 				<a class="btn" ng-click="slowDown()"> <i class="material-icons">fast_rewind</i> </a>
-				<a class="btn teal lighten-3 readonly" > {{fps_val}}x </a>
+				<a class="btn teal lighten-3 readonly" > <div>{{fps_val}}x</div> </a>
 				<a class="btn" ng-click="speedUp()"> <i class="material-icons">fast_forward</i> </a>
 			</div>
 		</div>
