--- a/static/css/custom-mobile.css
+++ b/static/css/custom-mobile.css
@@ -11,7 +11,7 @@
 }
 
 .card-content > input {
-	font-size:50px!important; 
+	font-size:50px!important;
 	padding:40px;
 	text-align:center;
 	width:90%;
@@ -46,9 +46,9 @@
 
 
 [type="checkbox"]:not(:checked), [type="checkbox"]:checked {
-    position: relative; 
-    left: 0; 
-    visibility:visible; 
+    position: relative;
+    left: 0;
+    visibility:visible;
 }
 
 input[type=checkbox]
@@ -60,3 +60,22 @@ input[type=checkbox]
   -o-transform: scale(4); /* Opera */
   margin:10px;
 }
+
+.interactionLayer * {
+	font-size:1.5em!important;
+}
+
+a.btn {
+	padding:40px!important;
+}
+
+a.btn > i {
+	transform: translateY(-15px);
+}
+
+a.btn > div {
+	transform: translateY(-15px);
+	font-size:1.3em!important;
+}
+
+#histByYear_slider {display:none;}
